# aws-summit-2025

./: README.md
talk-with-docs-starter2/: Dockerfile  README.md  middleware.ts  package-lock.json  package.json
talk-with-docs-starter2-cdk/: README.md  app.py  requirements.txt
talk-with-docs-starter2-cdk/graphql/: schema.graphql
talk-with-docs-starter2-cdk/lambda/: chat_handler.py  upload_handler.py  upload_vectorize_handler.py
talk-with-docs-starter2-cdk/scripts/: create-bucket-policy.sh  enable-guardduty-s3.sh  sync-kb.sh  update-guardduty-iam.sh  update-lb-dns.sh
talk-with-docs-starter2-cdk/talk_with_docs_backend/: appsync_stack.py  bedrock_kb_stack.py  cloudfront_stack.py  cognito_stack.py  eks_server_stack.py  eks_stack.py  file_chat_stack.py  file_upload_stack.py  lambda_stack.py  opensearch_stack.py  storage_stack.py  talk_with_docs_backend_stack.py  vector_stack.py
talk-with-docs-starter2-server/: Dockerfile  README.md  pyproject.toml  run-docker.sh  run.sh
talk-with-docs-starter2-server/app/: main.py
talk-with-docs-starter2-server/app/routes/: chat.py  check_upload_status.py  generate_upload_url.py
talk-with-docs-starter2/app/: auth.ts  layout.tsx  page.tsx
talk-with-docs-starter2/components/: dashboard-nav.tsx  dashboard-stats.tsx  document-chat-history.tsx  document-chat.tsx  recent-chats.tsx  recent-documents.tsx
talk-with-docs-starter2/hooks/: useContainerDimensions.ts  useDocumentChat.ts  useDocumentChatHistory.ts
talk-with-docs-starter2/lib/: appsync-client.ts  email-utils.ts  fetchDocuments.ts  get-pdf-count.ts
(+29 files in other folders)
